# AI-generated-video-authentication-model

./: .gitignore  README.md  analyze_data_health.py  eval.py  eval_temporal.py  inference.py  inference_ensemble.py  inference_temporal.py  prepare_data.py  pyproject.toml  requirements.txt  train.py  train_temporal.py
configs/: baseline_binary.yaml  baseline_binary_allvideo.yaml  baseline_binary_allvideo_fft.yaml  baseline_binary_allvideo_fft_textmask.yaml  baseline_binary_allvideo_textmask.yaml  baseline_binary_real_hardnegative_eval.yaml  baseline_binary_real_hardnegative_query_eval.yaml  baseline_binary_shorts.yaml  baseline_binary_shorts_background.yaml  baseline_binary_shorts_face.yaml  baseline_binary_shorts_fft.yaml  baseline_binary_shorts_holdout.yaml  baseline_binary_shorts_holdout_fft.yaml  baseline_binary_shorts_pilot.yaml  baseline_binary_shorts_pilot_fft.yaml  baseline_multiclass.yaml  baseline_multiclass_allvideo.yaml  baseline_quick.yaml  baseline_ultraquick.yaml  baseline_ultraquick_fft.yaml  baseline_ultraquick_shortsmix.yaml  baseline_ultraquick_shortsmix_fft.yaml  baseline_ultraquick_shortsmix_pilot.yaml  protocol_youtube_dataset_plus_local_videoonly_clean_convnext_full_ema.yaml  protocol_youtube_dataset_plus_local_videoonly_clean_convnext_full_mixup_ema.yaml  protocol_youtube_dataset_plus_local_videoonly_clean_robustaug_ema.yaml  protocol_youtube_dataset_plus_local_videoonly_clean_robustaug_ema_df_holdout.yaml  protocol_youtube_dataset_plus_local_videoonly_clean_robustaug_ema_ff2f_holdout.yaml  temporal_binary_allvideo.yaml  temporal_binary_shorts.yaml  (+19 more)
(+68 files in other folders)
